RESOLVED FIXED105422
Web Inspector: scripts to evaluate on load are not removed from inspector state when Page agent is disabled
https://bugs.webkit.org/show_bug.cgi?id=105422
Summary Web Inspector: scripts to evaluate on load are not removed from inspector sta...
Andrey Kosyakov
Reported 2012-12-19 05:25:22 PST
We maintain scripts to evaluate on load as part of the inspector state. The scripts are normally managed by the front-end, so their life time should match that of the front-end. Currently, scripts survive the agent being detached, which leads to bugs such as http://crbug.com/165445
Attachments
Patch (3.09 KB, patch)
2012-12-19 05:35 PST, Andrey Kosyakov
no flags
Andrey Kosyakov
Comment 1 2012-12-19 05:35:52 PST
Alexander Pavlov (apavlov)
Comment 2 2012-12-19 05:52:05 PST
Comment on attachment 180143 [details] Patch r=me
WebKit Review Bot
Comment 3 2012-12-19 05:57:45 PST
Comment on attachment 180143 [details] Patch Clearing flags on attachment: 180143 Committed r138150: <http://trac.webkit.org/changeset/138150>
WebKit Review Bot
Comment 4 2012-12-19 05:57:48 PST
All reviewed patches have been landed. Closing bug.
Pavel Feldman
Comment 5 2012-12-19 07:47:34 PST
Comment on attachment 180143 [details] Patch Should we now remove everything?
Note You need to log in before you can comment on or make changes to this bug.