Web Inspector: scripts to evaluate on load are not removed from inspector state when Page agent is disabled https://bugs.webkit.org/show_bug.cgi?id=105422

Reviewed by Alexander Pavlov.

- reset scripts to evaluate on load when InspectorPageAgent is disabled.
- added InspectorState::remove();

* inspector/InspectorPageAgent.cpp:
(WebCore::InspectorPageAgent::disable):
* inspector/InspectorState.cpp:
(WebCore::InspectorState::remove):
(WebCore):
* inspector/InspectorState.h:
(InspectorState):


Canonical link: https://commits.webkit.org/123652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138150 268f45cc-cd09-0410-ab3c-d52691b4dbfc